Time: 18 ms (87.77%), Space: 46 MB (29.65%) - LeetHub