@@ -1,29 +1,30 @@
 class Solution{
-    public List<List<Integer>> fourSum(int[] a, int t){        
-        Arrays.sort(a);
-        int len = a.length;
-
+    public List<List<Integer>> fourSum(int[] nums, int target){
         List<List<Integer>> ll = new ArrayList<>();
-        if(t<Integer.MIN_VALUE || t>Integer.MAX_VALUE) return ll;
-        if(len<4) return ll;
+        int n = nums.length;
+        if(n < 4) return ll;
 
-        for(int i=0; i<len-3; i++){
-            if(i>0 && a[i]==a[i-1]) continue;
+        Arrays.sort(nums);
 
-            for(int j=i+1; j<len-2; j++){
-                if(j>i+1 && a[j]==a[j-1]) continue;
+        for(int i=0; i<n-3; i++){
+            if(i > 0 && nums[i] == nums[i - 1]) continue;
 
-                int l=j+1, r=len-1;
-                while(l<r){
-                    long sum = (long)a[i]+a[j]+a[l]+a[r];
-                    if(sum<t) l++;
-                    else if(sum>t) r--;
+            for(int j=i+1; j<n-2; j++){
+                if(j > i + 1 && nums[j] == nums[j - 1]) continue;
+
+                int l = j + 1, r = n - 1;
+
+                while(l < r){
+                    long sum = nums[i]*1L + nums[j] + nums[l] + nums[r];
+
+                    if(sum < target) l++;
+                    else if(sum > target) r--;
                     else{
-                        ll.add(Arrays.asList(a[i], a[j], a[l], a[r]));                        
-                        
-                        while(l<r&&a[l]==a[l+1]) l++;
+                        ll.add(List.of(nums[i], nums[j], nums[l], nums[r]));
+                        while(l < r && nums[l] == nums[l + 1]) l++;
+                        while(l < r && nums[r] == nums[r - 1]) r--;
+
                         l++;
-                        while(l<r&&a[r]==a[r-1]) r--;
                         r--;
                     }
                 }
